--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0.9000
 Imports:
-  data.table,
-  tuneR
+  data.table
 Suggests:
+  tuneR,
   alluvial
