--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tdsc
 Title: Time Domain Signal Coding
 Version: 0.0.0.9000
-Authors@R: person("Ed", "Baker", email = "ed@ebaker.me.uk", role = c("aut", "cre"))
+Authors@R: person("Ed", "Baker", email = "ed@ebaker.me.uk", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-5887-9543"))
 Description: Time domain signal coding in R.
 Depends: R (>= 3.4.0)
 License: GPL-3
@@ -9,7 +9,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0.9000
 Imports:
-  data.table
+  data.table,
+  methods
 Suggests:
   tuneR,
   alluvial
