--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
+r:
+  - oldrel
+  - release
+  - devel
 sudo: false
 cache: packages
+r_packages: testthat
 
 after_success:
   - Rscript -e 'devtools::install();devtools::test()'
