--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: tdsc
 Title: Time Domain Signal Coding
-Version: 0.0.0.9000
+Version: 1.0.0.0
 Authors@R: person("Ed", "Baker", email = "ed@ebaker.me.uk", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-5887-9543"))
-Description: Time domain signal coding in R.
+Description: Functions for performing time domain signal coding and related tasks. This package creates the standard S-matrix and A-matrix (with variable lag), has tools to convert coding matricies into distributred matrices, provides published codebooks and allows for extraction of code sequences.
 Depends: R (>= 3.4.0)
 License: GPL-3
 Encoding: UTF-8
