--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,5 @@ export(tdsc)
 exportClasses(tdsc)
 importFrom(graphics,abline)
 importFrom(graphics,plot)
+importFrom(moments,skewness)
+importFrom(stats,var)
