--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,11 @@ Depends: R (>= 3.4.0)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.0.9000
+RoxygenNote: 6.1.1
 Imports:
   data.table,
-  methods
+  methods,
+  moments
 Suggests:
     tuneR,
     alluvial,
