tdsc.plt. Closes #26.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,12 @@ export(emptyBands)
 export(followingCodes)
 export(sample_waveform)
 export(tdsc)
+export(tdsc.plot)
 exportClasses(tdsc)
 importFrom(graphics,abline)
 importFrom(graphics,plot)
 importFrom(moments,skewness)
 importFrom(stats,var)
+importFrom(utils,askYesNo)
+importFrom(utils,install.packages)
+importFrom(utils,installed.packages)
