--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(followingCodes)
 export(sample_waveform)
 export(tdsc)
 export(tdsc.plot)
+export(tdsc.w)
 exportClasses(tdsc)
 importFrom(graphics,abline)
 importFrom(graphics,plot)
