--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Authors@R: person("Ed", "Baker", email = "ed@ebaker.me.uk", role = c("aut", "cre
 Description: Functions for performing time domain signal coding as used in Chesmore (2001) <doi:10.1016/S0003-682X(01)00009-3>, and related tasks. This package creates the standard S-matrix and A-matrix (with variable lag), has tools to convert coding matrices into distributed matrices, provides published codebooks and allows for extraction of code sequences.
 Depends: R (>= 3.5.0)
 License: GPL-3
+Langage: en-UK
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
