--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(followingCodes)
 export(normalise.a.matrix)
 export(sample_waveform)
 export(tdsc)
-export(tdsc.plot)
+export(tdsc_plot)
 exportClasses(tdsc)
 importFrom(graphics,abline)
 importFrom(graphics,plot)
